[CLIC] writing the CLIC chapter

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -90,6 +90,7 @@
 \newcommand{\voltpercm}{\ensuremath{\mathrm{V/cm}}\xspace}
 \newcommand{\mv}{\ensuremath{\mathrm{\,m\kern -0.1em V}}\xspace}
 \newcommand{\picocoulomb}{\ensuremath{\mathrm{\,p\kern -0.01em C}}\xspace}
+\newcommand{\inversecmsquaredsec}{\ensuremath{\text{cm}^{-2}\text{s}^{-1}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
