--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -429,3 +429,59 @@ author = "F. Krummenacher",
       year          = "1981",
       %url           = "http://cds.cern.ch/record/100213",
 }
+
+
+@article{Aicheler:1500095,
+  author =	 "Aicheler, M and Burrows, P and Draper, M and Garvey,
+                  T and Lebrun, P and Peach, K and Phinney, N and
+                  Schmickler, H and Schulte, D and Toge, N",
+  title =	 "{A Multi-TeV Linear Collider Based on CLIC
+                  Technology: CLIC Conceptual Design Report}",
+  number =
+                  "CERN-2012-007. SLAC-R-985. KEK-Report-2012-1. PSI-12-01.
+                  JAI-2012-001",
+  year =	 2012,
+}
+
+@article{Linssen:1425915,
+  author =	 "Linssen, Lucie and Miyamoto, Akiya and
+                  Stanitzki,Marcel and Weerts, Harry",
+  title =	 "{Physics and Detectors at CLIC: CLIC Conceptual
+                  Design Report}",
+  address =	 "Geneva",
+  number =	 "arXiv:1202.5940. CERN-2012-003. ANL-HEP-TR-12-01.
+                  DESY-12-008. KEK-Report-2011-7",
+  year =	 2012,
+  reportNumber = "arXiv:1202.5940",
+}
+
+@MISC{wikipediaParticles,
+  title = {{Standard Model}},
+  howpublished = {Website: \url{http://en.wikipedia.org/wiki/File:Standard_Model_of_Elementary_Particles.svg}}
+}
+
+@misc{website:Sailer,
+      author = "A. Sailer",
+      title = "LCD Seminar for Summer Interns",
+      month = "July",
+      year = "2013",
+      howpublished = "\url{http://indico.cern.ch/conferenceDisplay.py?confId=264776}"
+}
+
+@article{Felzmann:2157041,
+      author        = "Felzmann, U. and others",
+      title         = "{Updated baseline for a staged Compact Linear Collider}",
+      month         = "Jun",
+      year          = "2016",
+      reportNumber  = "CLICdp-Draft-2016-010",
+      url           = "https://cds.cern.ch/record/2157041",
+}
+
+@article{Dannheim:1443516,
+      author        = "Dannheim, D and Sailer, A",
+      title         = "{Beam-Induced Backgrounds in the CLIC Detectors}",
+      month         = "Apr",
+      year          = "2012",
+      reportNumber  = "\href{https://cds.cern.ch/record/1443516}{LCD-Note-2011-021}",
+      %url           = "https://cds.cern.ch/record/1443516",
+}
