--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -16,26 +16,26 @@
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
-
-\HRule \\[0.4cm]
+\vspace{2cm}
+%% \HRule \\[0.4cm]
 { \huge \bfseries \thesistitle}\\[0.4cm] % Title of your document
-\HRule \\[1.5cm]
- 
+%% \HRule \\[1.5cm]
+\vspace{2cm}
 %----------------------------------------------------------------------------------------
 %	AUTHOR SECTION
 %----------------------------------------------------------------------------------------
 
-{\Large A thesis submitted to attain the degree of} \vspace*{1ex} \\
-{\Large DOCTOR OF SCIENCES of ETH ZURICH} \vspace*{1ex}\\
-{\Large (Dr. sc. ETH Zurich)} \vspace*{3ex}
+{\Large A thesis submitted to attain the degree of} \\ \vspace{0.5cm}
+{\Large DOCTOR OF SCIENCES of ETH ZURICH}\\ \vspace{0.3cm}
+{\Large (Dr. sc. ETH Zurich)} \vspace{2cm}
 
 
-{\Large presented by \vspace*{1ex}} \\
-{\Large \thesisauthor \vspace*{3ex}}\\
-{\Large \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne}} \vspace*{3ex}\\
-{\Large born on 11.08.1989} \vspace*{2ex}\\
-{\Large \thesistown} \vspace*{4ex}\\
-{\Large accepted on the recommendation of} \vspace*{2ex}\\
+{\Large presented by} \\ \vspace{0.3cm}
+{\Large \thesisauthor}\\ \vspace{1cm}
+{\Large \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne}}\\ \vspace{1cm}
+{\Large born on 11.08.1989} \\
+{\Large \thesistown}\\
+{\Large accepted on the recommendation of} \\
 {\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\
 
 %% \begin{minipage}{0.4\textwidth}
@@ -60,7 +60,7 @@
 %	DATE SECTION
 %----------------------------------------------------------------------------------------
 
-{\large 2016}\\[3cm] % Date, change the \today to a set date if you want to be precise
+{\large 2016} % Date, change the \today to a set date if you want to be precise
 
 %----------------------------------------------------------------------------------------
 %	LOGO SECTION
