--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -829,6 +829,10 @@ in the collected charge in the edge region.
   \begin{subfigure}[b]{\textwidth}
     \includegraphics[width=0.8\textwidth]{figures/ActiveEdge/streamlines_GNDGR.pdf}
     \caption{Grounded guard ring}
+  \end{subfigure}\\
+  \begin{subfigure}[b]{\textwidth}
+    \includegraphics[width=0.6\textwidth]{figures/ActiveEdge/streamlines_55-GNDGR-50}
+    \caption{55-GNDGR-50}
   \end{subfigure}
   \caption{Streamlines for different configurations of guard ring. The
     generated charges follow the streamlines. The streamlines which
